[tool.poetry]
name = "meater-api"
version = "0.1.0"
description = ""
authors = ["Zahlii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.10.3"
matplotlib = "^3.10.0"
pandas = "^2.2.3"


[tool.poetry.group.analysis.dependencies]
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
darts = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
